get book and patron by id and fix changes